<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPad</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="detail_btn">Detail</string>
    <string name="feed_list_title">Khuyến mãi</string>
    <string name="refresh_item">Refresh</string>
    <string name="send_feedback_item">Send feedback</string>
    <string name="close_btn">Close</string>
    <string name="empty"></string>
    <string name="store_catalog_menu">Cửa hàng</string>
    <string name="orders_menu">Đơn hàng</string>
    <string name="favorite_menu">Quan tâm</string>
    <string name="member_card_menu">Thẻ thành viên</string>
    <string name="title_activity_feed_list">FeedListActivity</string>
    <string name="title_activity_feed_detail">Feed Detail</string>
    <string name="feed_data">feed data</string>
    <string name="branchName">branch name</string>
    <string name="branchImage">branch image</string>
    <string name="syscat">syscat</string>
    <string name="branchWideLogo">branch wide logo</string>

</resources>