<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/syscatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/syscat" />

    <ImageView
        android:id="@+id/branchLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/branchImage"
        android:src="@drawable/image_loading" />

    <TextView
        android:id="@+id/branchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/syscatName"
        android:layout_below="@+id/syscatName"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/branchLogo"
        android:text="@string/branchName" />

</RelativeLayout>
